# tensorboard_plugin_customizable_plots

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
src/customizable_plots/: __init__.py
src/customizable_plots/static/: dashboard.js  package.json
src/customizable_plots/static/css/: mui-icons.css  styles.css
src/customizable_plots/static/libs/: material-ui.development.js  react-dom.development.js
src/customizable_plots/static/libs/config/: plot_config.js  traces_config.js
tensorboard_plugin_customizable_plots/: plugin.py
tensorboard_plugin_customizable_plots/static/: dashboard.js  index.html  index.js  package-lock.json
tensorboard_plugin_customizable_plots/static/css/: mui-icons.css  roboto.css
tensorboard_plugin_customizable_plots/static/dest/: dashboard.js
tensorboard_plugin_customizable_plots/static/libs/: create-plotly-component.js  material-ui.development.js  react-dom.development.js  react.development.js
tensorboard_plugin_customizable_plots/static/libs/config/: general_config.js  layout_attributes.js  tex-mml-chtml.js  toImageButtonOptions.js  traces_config.js
